--- a/style.css
+++ b/style.css
@@ -1,140 +1,139 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.ent-form{
- box-sizing: border-box;
- box-shadow: 1px 1px 2px gray;
- width: 80%;
- border: 2px solid grey;
- border-radius: 5px;
- margin: 30px auto;
- padding: 20px;
- /* display: flex; */
- /* flex-wrap: wrap; */
- /* justify-content: center; */
- /* align-items: center; */
- background:linear-gradient(rgb(255, 255, 107), rgb(104, 255, 240));
- font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.ent-form {
+  box-sizing: border-box;
+  box-shadow: 1px 1px 2px gray;
+  width: 80%;
+  border: 2px solid grey;
+  border-radius: 5px;
+  margin: 30px auto;
+  padding: 20px;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  background: linear-gradient(rgb(255, 255, 107), rgb(104, 255, 240));
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.cover-flex{
-    display: flex;
-    justify-content: flex-start;
+.cover-flex {
+  display: flex;
+  justify-content: flex-start;
 }
 
-.left{
-    /* display: inline-block; */
-    align-items: flex-start;
-    margin-right: 70px;
-    padding: 10px;
+.left {
+  /* display: inline-block; */
+  align-items: flex-start;
+  margin-right: 70px;
+  padding: 10px;
 }
 
-.mid{
- width: 80px;
- display: inline-block;
+.mid {
+  width: 80px;
+  display: inline-block;
 }
 
-.right{
-    /* display: inline-block; */
-    align-items: flex-start;
-    padding: 10px;
-
+.right {
+  /* display: inline-block; */
+  align-items: flex-start;
+  padding: 10px;
 }
 
-.hg1 , .hg3{
-   margin-bottom: 20px;
+.hg1,
+.hg3 {
+  margin-bottom: 20px;
 }
 
-.hg2 , .hg4{
-    padding-bottom: 20px;
- }
-
- .lock{
-    margin-left: 20px;
- }
-
- .btnA{
-     display: flex;
-     justify-content: flex-start;
- }
-
- .btn1{
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     font-weight: 600;
-     letter-spacing: 2;
-     font-size: 1.1em;
-     color: #fff;
-     padding:10px 28px;
-     background-color: black;
-     border: 2px solid gray;
-     border-radius: 3px;
-     box-shadow: 1px 1px 2px grey;
-     margin-right: 40px;
- }
-
- .btn1:hover{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 700;
-    letter-spacing: 2;
-    font-size: 1.2em;
-    color: black;
-    padding:10px 28px;
-    background: linear-gradient(45deg, beige , #60ffff);
-    border: 2px solid gray;
-    border-radius: 3px;
-    box-shadow: 1px 1px 2px grey;
-    margin-right: 40px;
-    transition-duration: 0.5s;
+.hg2,
+.hg4 {
+  padding-bottom: 20px;
 }
 
-
- label{
-     display: inline-block;
-     margin-bottom: 10px;
-     font-size: 1.3em;
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     font-weight: 600;
- }
-
- input[type="text"]{
-     padding: 8px;
-     border: 2px solid gray;
-     font-size: 1.2em;
-     border-radius: 5px;
- }
-
- input[type="password"]{
-    padding: 8px;
-    border: 2px solid gray;
-     font-size: 1.2em;
-     border-radius: 5px;
-
+.lock {
+  margin-left: 20px;
 }
 
-.mid-container{
-    display: block;
-    justify-content: flex-start;
-    width : 70%;
-    padding: 20px;
-    margin: 40px 20px;
+.btnA {
+  display: flex;
+  justify-content: flex-start;
 }
 
-.rate{
-    display: flex;
-    justify-content: space-evenly;
-    margin-left: 280px;
+.btn1 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 600;
+  letter-spacing: 2;
+  font-size: 1.1em;
+  color: #fff;
+  padding: 10px 28px;
+  background-color: black;
+  border: 2px solid gray;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px grey;
+  margin-right: 40px;
 }
 
-.form2{
+.btn1:hover {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 700;
+  letter-spacing: 2;
+  font-size: 1.2em;
+  color: black;
+  padding: 10px 28px;
+  background: linear-gradient(45deg, beige, #60ffff);
+  border: 2px solid gray;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px grey;
+  margin-right: 40px;
+  transition-duration: 0.5s;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-size: 1.3em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 600;
+}
+
+input[type="text"] {
+  padding: 8px;
+  border: 2px solid gray;
+  font-size: 1.2em;
+  border-radius: 5px;
+}
+
+input[type="password"] {
+  padding: 8px;
+  border: 2px solid gray;
+  font-size: 1.2em;
+  border-radius: 5px;
+}
+
+.mid-container {
+  display: block;
+  justify-content: flex-start;
+  width: 70%;
+  padding: 20px;
+  margin: 40px 20px;
+}
+
+.rate {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 280px;
+}
+
+.form2 {
   width: 90%;
   margin: 20px auto;
 }
 
-.option1{
-    display: flex;
-    justify-content: space-between;
+.option1 {
+  display: flex;
+  justify-content: space-between;
 }
 
 /* .option1 input[type="radio"]{
@@ -142,58 +141,89 @@
   padding: 10px;
 } */
 
-.twenty{
-    width: 20%;
+.twenty {
+  width: 20%;
 }
 
-.seventy{
-    display: flex;
-    justify-content: space-between;
-    width: 65%;
-    margin-right: 20px;
+.seventy {
+  display: flex;
+  justify-content: space-between;
+  width: 65%;
+  margin-right: 20px;
 }
 
-.howlike1{
+.howlike1 {
   color: #0c0606;
-  font-size:1em;
+  font-size: 1em;
   font-weight: 600;
 }
 
-#howlike{
-    margin: 20px 0;
-    width: 200px;
-    padding: 8px;
-    box-sizing: border-box;
-  }
-
-  #howlike2{
-    margin: 10px 0;
-    width: 300px;
-    padding: 8px;
-  }
-
-.white{
-    border: 4px solid #000000;
-    border-radius: 5px;
+#howlike {
+  margin: 20px 0;
+  width: 200px;
+  padding: 8px;
+  box-sizing: border-box;
 }
 
-.red{
-    border: 4px solid rgb(255, 99, 14);
-    border-radius: 5px;
+#howlike2 {
+  margin: 10px 0;
+  width: 300px;
+  padding: 8px;
 }
 
-
-/* .option1{
-    border: 4px solid greenyellow;
-} */
-
-#howlike2{
-    font-size: 1.3em;
-    font-weight: 600;
+.white {
+  border: 4px solid #000000;
+  border-radius: 5px;
 }
 
-.howlike1{
-    color: #000000;
-    font-size:1em;
-    font-weight: 600;
+.red {
+  border: 4px solid rgb(255, 99, 14);
+  border-radius: 5px;
+}
+
+#howlike2 {
+  font-size: 1.3em;
+  font-weight: 600;
+}
+
+.howlike1 {
+  color: #000000;
+  font-size: 1em;
+  font-weight: 600;
+}
+
+@media (min-width: 360px) and (max-width: 640px) {
+  .cover-flex {
+    flex-direction: column;
   }
+
+  .btnA {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .twenty label {
+    font-size: 15px;
+  }
+
+  .rate h3 {
+    font-size: 15px;
+  }
+  .howlike1 {
+    font-size: 15px;
+  }
+
+  .mid-container {
+    display: block;
+
+    width: 90%;
+    padding: 10px;
+    margin: 10px 5px;
+  }
+
+  .rate {
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 100px;
+  }
+}
